[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/End.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="OptionsMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="OptionsMenu"]
margin_top = 497.0
margin_right = 99.0
margin_bottom = 511.0
text = "Tab Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="OptionsMenu"]
margin_top = 515.0
margin_right = 99.0
margin_bottom = 535.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevel" type="Button" parent="OptionsMenu"]
margin_top = 539.0
margin_right = 99.0
margin_bottom = 559.0
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoards" type="Button" parent="OptionsMenu"]
margin_top = 563.0
margin_right = 99.0
margin_bottom = 583.0
text = "LeaderBoards"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OptionsMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="OptionsMenu/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="OptionsMenu/LeaderBoards" to="." method="_on_LeaderBoards_pressed"]
